# VSCODE_CMAKE2

./: CMakeLists.txt  Config.cmake.in  VscodeCmakeDefines.h  VscodeCmakeInclude.cpp  VscodeCmakeInclude.h
src/cpp/: ClassTest.cpp  ClassTest.h
src/cu/: CUDACommon.cu  CUDACommon.h
test/: test.cpp
